--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,10 +6,11 @@ html {
     font-size: 14px;
 }
 body {
-    font-family: monospace;
+    font-family: sans-serif;
     background-color: #000;
     color: #fff;
     font-size: 1rem;
+    line-height: 1;
 }
 main {
     padding: 20px;
@@ -397,7 +398,7 @@ body.recording .download-video-button
 {
     cursor: pointer;
     text-align: center;
-    padding: 5px 0 2px 0;
+    padding: 5px 0 5px 0;
     background-color: #666060;
     font-size: 14px;
 }
