add arrow key controls to main text and watermarks. apply white brackets to word-level. hide dropdowns with only one option. move webpack config to root dir and update it

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,6 +31,13 @@ canvas {
 canvas + canvas {
     margin-top: 60px;
 }
+*:focus,
+.pseudo-focused {
+    outline: 1px solid #fff;
+    outline-offset: -2px;
+    /* box-sizing: content-box; */
+    /* border: 1px solid #fff; */
+}
 /* option {
     position: relative;
 }
