save body when creating new record

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -550,6 +550,7 @@ input[value="fetch"]
 }
 .record-form-button {
     flex-basis: 100%;
+    cursor: pointer;
 }
 .record-form-button + .record-form-button {
     margin-top: 3px;
