--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,11 +94,29 @@ option:after {
 .pseudo-select.expanded .color-options-wrapper {
     display: flex;
 }
-.btn {
-    padding: 8px 10px;
-    border: 2px solid #000;
+.btn, a.btn, .dummy-btn{
+    -webkit-appearance: none;
+    appearance: none;
+    border: 4px solid;
+    background-color: transparent;
+    color: #fff;
+    font-size: 17px;
+    line-height: 21px;
+    border-radius: 10px;
     cursor: pointer;
-    
+}
+.btn {
+    /* padding: 8px 10px;
+    border: 2px solid #000;
+    cursor: pointer; */
+    width: 270px;
+    height: 90px;
+}
+.btn:hover
+{
+    color: #000;
+    background-color: #fff;
+    border-color: #fff;
 }
 .square-btn {
     /* font-size: 2em; */
@@ -302,18 +320,8 @@ body.recording .download-video-button
     clear: both;
     height: 0;
 }
-.btn
-{
-    width: 270px;
-    height: 90px;
-    /*margin-top: 20px;*/
-}
-.btn:hover
-{
-    color: #000;
-    background-color: #fff;
-    border-color: #fff;
-}
+
+
 #action-container,
 .action-container
 {
@@ -529,6 +537,9 @@ input[value="fetch"]
 {
     cursor: pointer;
     margin-top: 2px;
+}
+#common-control-bottom {
+    margin-top: 10px;
 }
 #common-control-bottom .btn + .btn
 {
