--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,7 @@ html {
 }
 body {
     font-family: Helvetica, sans-serif;
+    /* font-family: 'standard', sans-serif; */
     background-color: #000;
     color: #fff;
     font-size: 1rem;
