--- a/static/css/main.css
+++ b/static/css/main.css
@@ -556,9 +556,18 @@ input[value="fetch"]
 .common-control-bottom {
     margin-top: 20px;
 }
-.common-control-bottom .btn + .btn
+.buttons-container
 {
-    margin-top: 10px;
+    --flex-gap: 10px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: calc(100% + var(--flex-gap));
+    top: calc(-1 * var(--flex-gap) / 2);
+    left: calc(-1 * var(--flex-gap) / 2);
+}
+.buttons-container .btn {
+    margin: calc( var(--flex-gap) / 2 );
 }
 #custom-size-wrapper {
     display: none;
@@ -605,14 +614,16 @@ input[value="fetch"]
     }
     .control-panel {
         position: static;
-        margin-bottom: 20px;
+        /* margin-bottom: 20px; */
         width: 540px;
     }
     .generator-container {
-        display: flex;
+        /* display: flex;
         flex-direction: column;
-        align-items: center;
-        /* justify-content: center; */
+        align-items: center; */
+    }
+    .buttons-container {
+        flex-direction: row;
     }
 }
 @media screen and (max-width: 823px)
@@ -681,11 +692,11 @@ input[value="fetch"]
     .org-main-canvas
     {
         position: absolute;
-        transform-origin: left top;
+        /* transform-origin: left top; */
         /* width: 100% !important; */
         /* height: 100% !important; */
-        top: 0;
-        left: 0;
+        /* top: 0;
+        left: 0; */
         /*margin-top: 10px;*/
     }
     #action-container,
