add watch mode. make readVideoUploaded recognize the sides

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,7 +132,9 @@ option:after {
     height: 30px;
     /* display: inline-block; */
 }
-
+.hidden {
+    display: none;
+}
 .generator-container {
     /* display: flex; */
 }
