--- a/static/css/main.css
+++ b/static/css/main.css
@@ -184,7 +184,7 @@ select
     appearance: none;
     border-radius: 0;
     position: relative;
-    background: url(../../media/svg/v-9-k.svg) 98% / 10% no-repeat #FFF;        
+    background: url(../../media/svg/v-9-k.svg) 98% / 24px no-repeat #FFF;        
     background-color: #666060;
 }
 textarea
@@ -459,6 +459,9 @@ body.recording .download-video-button
 .flex-item[flex='3'] {
     flex: 3;
 }
+.flex-item[flex='7'] {
+    flex: 7;
+}
 .flex-item:last-child
 {
     /* margin-right: 0; */
@@ -679,6 +682,31 @@ input[value="fetch"]
 }
 .delete-button:after {
     transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.pdf-size-popup {
+    position: fixed;
+    z-index: 1000;
+    width: 500px;
+    max-width: calc(100% - 40px);
+    margin: 0 20px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #000;
+    padding: 20px;
+}
+.pdf-size-popup[data-hidden="1"] {
+    opacity: 0;
+    pointer-events: none;
+}
+.pdf-size-popup[data-hidden="0"] {
+    opacity: 1;
+    pointer-events: auto;
+    transition: opacity .5s;
+}
+.pdf-size-popup > *+* {
+    margin-top: 10px;
 }
 @media screen and (max-width: 1080px)
 {
