--- a/static/css/main.css
+++ b/static/css/main.css
@@ -685,28 +685,36 @@ input[value="fetch"]
 }
 
 .pdf-size-popup {
-    position: fixed;
-    z-index: 1000;
-    width: 500px;
-    max-width: calc(100% - 40px);
-    margin: 0 20px;
+    
+    /* position: fixed; */
+    /* z-index: 1000; */
+    /* width: 500px; */
+    /* max-width: calc(100% - 40px); */
+    /* margin: 0 20px;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     background-color: #000;
-    padding: 20px;
+    /* padding: 20px; */
 }
 .pdf-size-popup[data-hidden="1"] {
+    height: 0;
     opacity: 0;
     pointer-events: none;
 }
 .pdf-size-popup[data-hidden="0"] {
+    height: auto;
     opacity: 1;
     pointer-events: auto;
-    transition: opacity .5s;
+    /* transition: opacity .5s; */
 }
 .pdf-size-popup > *+* {
     margin-top: 10px;
+}
+.pdf-size-popup > .flex-container {
+    width: calc(100% + calc(var(--flex-item-margin) * 2));
+    position: relative;
+    left: calc(-1 * var(--flex-item-margin));
 }
 @media screen and (max-width: 1080px)
 {
