--- a/static/css/main.css
+++ b/static/css/main.css
@@ -141,17 +141,16 @@ option:after {
     max-height: 100vh;
 }
 .control-panel {
-    /* flex: 0 0 300px; */
-    width: 500px;
-    padding-right: 20px;
+    width: 520px;
+    padding: 20px;
     padding-bottom: 90px;
     max-height: 100vh;
     overflow: scroll;;
-    /* position: sticky; */
     position: fixed;
-    top: 20px;
-    left: 20px;
-    /* margin-top: calc)var(--flex-item-margin); */
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+    background-color: #000;
 }
 #logo-container {
     display: none;
@@ -375,7 +374,10 @@ body.recording .download-video-button
 {
     display: inline-block;
 }
-
+.canvas-container {
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
 .three-control
 {
     display: none;
@@ -591,14 +593,12 @@ input[value="fetch"]
 {
     --flex-gap: 10px;
     display: flex;
-    /* flex-direction: column; */
-    position: relative;
-    width: calc(100% + var(--flex-gap));
-    top: calc(-1 * var(--flex-gap) / 2);
-    left: calc(-1 * var(--flex-gap) / 2);
+    /* position: relative; */
+    gap: var(--flex-gap);
+    width: 100%;
 }
 .buttons-container .btn {
-    margin: calc( var(--flex-gap) / 2 );
+    /* margin: calc( var(--flex-gap) / 2 ); */
 }
 #custom-size-wrapper {
     display: none;
@@ -614,6 +614,7 @@ input[value="fetch"]
     bottom: 20px;
     left: 20px;
     width: 480px;
+    z-index: 200;
 }
 .record-form-button,
 .record-form-button[flex] {
@@ -670,28 +671,11 @@ input[value="fetch"]
 }
 
 .pdf-size-popup {
-    
-    /* position: fixed; */
-    /* z-index: 1000; */
-    /* width: 500px; */
-    /* max-width: calc(100% - 40px); */
-    /* margin: 0 20px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%); */
     background-color: #000;
-    /* padding: 20px; */
+    margin-top: 20px;
 }
 .pdf-size-popup[data-hidden="1"] {
-    height: 0;
-    opacity: 0;
-    pointer-events: none;
-}
-.pdf-size-popup[data-hidden="0"] {
-    height: auto;
-    opacity: 1;
-    pointer-events: auto;
-    /* transition: opacity .5s; */
+    display: none;
 }
 .pdf-size-popup > *+* {
     margin-top: 10px;
@@ -719,6 +703,10 @@ input[value="fetch"]
     top: 0;
     left: 0;
 }
+.canvas-wrapper {
+    transform-origin: top left;
+    position: relative;
+}
 @media screen and (max-width: 1080px)
 {
     #content
@@ -730,12 +718,15 @@ input[value="fetch"]
     .common-control
     {
         width: 100%;
+        padding-left: 0;
+        padding-top: 0;
         padding-right: 0;
     }
     .control-panel {
         position: static;
         width: 540px;
         max-height: none;
+        overflow: auto;
     }
     .generator-container {
         margin-left: 0;
@@ -744,6 +735,15 @@ input[value="fetch"]
     }
     .buttons-container {
         flex-direction: row;
+    }
+    #canvas-container,
+    .canvas-container
+    {
+        display: block;
+        position: relative;
+        padding-right: 0;
+        padding-bottom: 0;
+        overflow: hidden;
     }
 }
 @media screen and (max-width: 823px)
@@ -758,6 +758,13 @@ input[value="fetch"]
         text-indent: 0;
     }
 }
+@media screen and (max-width: 520px)
+{
+    #record-form {
+        width: calc(100vw - 40px);
+    }
+}
+
 @media screen and (max-width: 500px)
 {
     #content
@@ -809,16 +816,6 @@ input[value="fetch"]
     {
         margin-bottom: 15px;
     }
-    .org-main-canvas
-    {
-        position: absolute;
-        /* transform-origin: left top; */
-        /* width: 100% !important; */
-        /* height: 100% !important; */
-        /* top: 0;
-        left: 0; */
-        /*margin-top: 10px;*/
-    }
     #action-container,
     .action-container
     {
@@ -851,12 +848,7 @@ input[value="fetch"]
     {
         height: 100%;
     }
-    #canvas-container,
-    .canvas-container
-    {
-        display: block;
-        position: relative;
-    }
+    
     .common-control
     {
         width: auto;
